# PolynomialDivideCPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  polynomial.c  polynomial.cpp  polynomial.py
include/Polynomial/: Polynomial.h  Result.h
src/: main.cc
